force-app/main/default/objects/Billing_Group__c/Billing_Group__c.object-meta.xml
<CustomObject>
    <label>Billing Group</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Billing Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>