force-app/main/default/objects/Billing_Group__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Billing Groups</relationshipLabel>
    <relationshipName>Billing_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>