force-app/main/default/objects/Billing_Group__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN12</fullName>
                <label>YIS NM1 - Data Center</label>
            </value>
            <value>
                <fullName>IN11</fullName>
                <label>Mumbai Region</label>
            </value>
            <value>
                <fullName>IN21</fullName>
                <label>YNS Mumbai – HO</label>
            </value>
            <value>
                <fullName>IN14</fullName>
                <label>YIS AP1 - Data Center</label>
            </value>
            <value>
                <fullName>IN23</fullName>
                <label>YNS KA1 - Data Center</label>
            </value>
            <value>
                <fullName>IN15</fullName>
                <label>YIS KA1 - Data Center</label>
            </value>
            <value>
                <fullName>IN22</fullName>
                <label>YNS AP1 - Data Center</label>
            </value>
            <value>
                <fullName>Customer Site</fullName>
            </value>
            <value>
                <fullName>IN16</fullName>
                <label>YIS TB1 - Data Center</label>
            </value>
            <value>
                <fullName>IN18</fullName>
                <label>YIS ND1 - Data Center</label>
            </value>
            <value>
                <fullName>IN25</fullName>
                <label>YNS ND1 - Data Center</label>
            </value>
            <value>
                <fullName>IN26</fullName>
                <label>YIS G1 - Office</label>
            </value>
            <value>
                <fullName>IN29</fullName>
                <label>YIS TS - Office</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>