force-app/main/default/objects/Billing_Group__c/fields/reset__c.field-meta.xml
<CustomField>
    <fullName>reset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>reset</label>
    <type>Checkbox</type>
</CustomField>