force-app/main/default/objects/Billing_Group__c/fields/Support_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Support_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Groups (Support To Account)</relationshipLabel>
    <relationshipName>Billing_Groups_Support_To</relationshipName>
    <type>Lookup</type>
</CustomField>