force-app/main/default/objects/Billing_Group__c/fields/Total_Burstable_Up_To__c.field-meta.xml
<CustomField>
    <fullName>Total_Burstable_Up_To__c</fullName>
    <label>Total Burstable Up To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>