force-app/main/default/objects/Billing_Group__c/fields/Total_Contracted_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Contracted_Value__c</fullName>
    <label>Total Contracted Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>