force-app/main/default/objects/Billing_Group__c/fields/Variable_Bandwidth__c.field-meta.xml
<CustomField>
    <fullName>Variable_Bandwidth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variable Bandwidth</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Billing Groups</relationshipLabel>
    <relationshipName>Billing_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>