force-app/main/default/objects/Billing_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bill_To_Account__c</columns>
    <columns>Support_To_Account__c</columns>
    <columns>Location__c</columns>
    <columns>Bandwidth_Type__c</columns>
    <columns>Total_Contracted_Value__c</columns>
    <columns>Total_Burstable_Up_To__c</columns>
    <columns>Contract__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>